[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Crypto-Octopus"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "duckdb",
  "tqdm"
]

[tool.setuptools]
py-modules = [
    "config",
    "init_db",
    "init_table",
    "insert_batch",
    "query",
    "download_data",
    "update"
]